Implemented 'is_liked' field for comments